# ge_coursework

./: Ai_comps.h  BasicEntityStats.cpp  BasicEntityStats.h  CMakeLists.txt  GE_GDD.docx  Particle.hpp  ParticleDrawable.hpp  ParticleManager.cpp  ParticleManager.hpp  ParticleSystem.cpp  ParticleSystem.hpp  RenderMan.cpp  RenderMan.h  Scene.hpp  SceneMan.cpp  SceneMan.hpp  UI_button.cpp  UI_button.hpp  UI_exit_to_mainmenu.cpp  UI_exit_to_mainmenu.hpp  UI_fight_loop.cpp  UI_fight_loop.hpp  audioManagerTest.cpp  console.cpp  console.hpp  consumable_man.cpp  consumable_man.hpp  event_man.cpp  event_man.hpp  fight_manager.cpp  fight_manager.hpp  healthbar.cpp  healthbar.hpp  input_man.cpp  input_man.hpp  item_man.cpp  item_man.hpp  launch.vs.json  main.cpp  message_box.cpp  (+1 more)
AI/: AI_cmps.cpp  AI_cmps.h  Memory.cpp  Memory.h
Engine/: AudioManager.cpp  AudioManager.h  Game_System.cpp  Game_System.h  RenderMan.cpp  RenderMan.h  Scene.hpp  SceneMan.cpp  SceneMan.hpp  UI_button.cpp  UI_button.hpp  UI_exit_to_mainmenu.cpp  UI_exit_to_mainmenu.hpp  consumable_man.cpp  consumable_man.hpp  ecm.cpp  ecm.hpp  event_man.cpp  event_man.hpp  fight_manager.hpp  game_system.cpp  game_system.h  game_system.hpp  input_man.cpp  input_man.hpp
assets/sounds/: AudioManager.cpp  AudioManager.h
res/sprites/: Aff_FightLoopIndicator.afphoto
